--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mentihack",
+  "name": "mentiman",
   "version": "1.0.0",
-  "description": "",
+  "description": "Menti slides",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon"
   },
   "author": "",
   "license": "ISC",
